firewall.conf
# Generated by iptables-save v1.4.21 on Tue Nov  5 11:41:02 2019
*nat
:PREROUTING ACCEPT [7592:986699]
:INPUT ACCEPT [2:104]
:OUTPUT ACCEPT [48:4129]
:POSTROUTING ACCEPT [463:31445]
-A POSTROUTING -s 192.168.20.3/32 -o eth0 -j MASQUERADE
-A POSTROUTING -s 192.168.20.3/32 -o eth0 -j MASQUERADE
-A POSTROUTING -s 192.168.20.3/32 -o eth1 -j MASQUERADE
-A POSTROUTING -s 192.168.20.3/32 -o eth2 -j MASQUERADE
COMMIT
# Completed on Tue Nov  5 11:41:02 2019
# Generated by iptables-save v1.4.21 on Tue Nov  5 11:41:02 2019
*filter
:INPUT DROP [834:138123]
:FORWARD DROP [27:1649]
:OUTPUT DROP [5:546]
-A INPUT -i lo -j ACCEPT
-A INPUT -m state --state RELATED,ESTABLISHED -j ACCEPT
-A INPUT -s 192.168.20.2/32 -p tcp -m tcp --dport 22 -j ACCEPT
-A FORWARD -s 192.168.20.4/32 -d 192.168.10.3/32 -j ACCEPT
-A FORWARD -s 192.168.10.3/32 -d 192.168.20.4/32 -j ACCEPT
-A FORWARD -i eth0 -o eth2 -j ACCEPT
-A FORWARD -i eth2 -o eth0 -j ACCEPT
-A FORWARD -i eth1 -o eth0 -j ACCEPT
-A FORWARD -i eth0 -o eth1 -j ACCEPT
-A OUTPUT -o lo -j ACCEPT
-A OUTPUT -m state --state NEW,ESTABLISHED -j ACCEPT
-A OUTPUT -s 192.168.20.2/32 -p tcp -m tcp --dport 22 -j ACCEPT
COMMIT
# Completed on Tue Nov  5 11:41:02 2019
